// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transpiler transpile() __inifiniteLoopCheck() do while should add a call to __energyCheck() in do while loops 1`] = `
"do {
  __energyCheck();
  console.log(\\"Hello\\");
} while (true);
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() do while should add a call to __energyCheck() in nested do while loops 1`] = `
"do {
  __energyCheck();
  do {
    __energyCheck();
  } while (true);
} while (true);
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for in should add a call to __energyCheck() in for in loops 1`] = `
"for (let key in obj) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for in should add a call to __energyCheck() in inline for in loops 1`] = `
"for (let key in obj) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for of should add a call to __energyCheck() in for of loops 1`] = `
"for (let key of arr) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for of should add a call to __energyCheck() in inline for of loops 1`] = `
"for (let key of arr) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for should add a call to __energyCheck() in for loops 1`] = `
"for (let i = 1; i > 0; i++) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for should add a call to __energyCheck() in inline for loops 1`] = `
"for (let i = 1; i > 0; i++) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for should add a call to __energyCheck() in nested foor loops 1`] = `
"for (; ; ) {
  __energyCheck();
  for (; ; ) {
    __energyCheck();
  }
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for should support empty for loops 1`] = `
"for (; ; ) {
  __energyCheck();
  ;
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for should support for loops without a test expression 1`] = `
"for (let i = 0; ; i++) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for should support for loops without an init expression 1`] = `
"for (; i > 0; i++) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() for should support for loops without an update expression 1`] = `
"for (let i = 0; i > 0; ) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() while should add a call to __energyCheck() in empty while loops 1`] = `
"while (true) {
  __energyCheck();
  ;
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() while should add a call to __energyCheck() in inline while loops 1`] = `
"while (true) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() while should add a call to __energyCheck() in nested while loops 1`] = `
"while (true) {
  __energyCheck();
  while (true) {
    __energyCheck();
  }
}
"
`;

exports[`Transpiler transpile() __inifiniteLoopCheck() while should add a call to __energyCheck() in while loops 1`] = `
"while (true) {
  __energyCheck();
  console.log(\\"Hello\\");
}
"
`;
